opam-version: "2.0"
maintainer: "Guillaume Hennequin"
authors: [ "Guillaume Hennequin" ]
license: "MIT"
homepage: "https://github.com/ghennequin/juplot"
dev-repo: "git+https://github.com/ghennequin/juplot.git"
bug-reports: "https://github.com/ghennequin/juplot/issues"
doc: "https://ghennequin.github.io/juplot/"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.06.0"}
  "dune" {build & >= "1.1.0"}
  "gp"
  "jupyter" {>= "2.4.0"}
]
synposis: "Gnuplot within OCaml and Owl"
